feat: implement agentic AI runtime engine — 8 modules, 92 source files, 736 tests
Rebuild AgentForge as a production-grade agentic AI runtime inspired by
Claude Code's architecture. The engine implements the full tool-calling
loop with sealed types, SSE streaming, hook interception, permission
enforcement, MCP protocol, and adaptive context compaction.

Modules:
- common (30 src): sealed ContentBlock/AgentForgeException, zero-dep JSON
- api-client (9 src): Anthropic + OpenAI providers, hand-built SSE parser
- runtime (17 src): ConversationRuntime agentic loop, 4 compaction strategies
- tools (9 src): ToolRegistry + 6 builtins (Bash, Read, Write, Edit, Glob, Grep)
- hooks (6 src): PreToolUse/PostToolUse subprocess pipeline, exit-code protocol
- mcp (9 src): JSON-RPC 2.0 client, stdio/HTTP transport, tool discovery
- config (6 src): layered config deep merge, 5-tier permission model
- gateway (6 src): HTTP/SSE server, CLI REPL, session manager, slash commands