@@ -1,302 +1,486 @@
 # AgentForge
 
-**Speculative Multi-Agent Orchestration Platform**
+**Agentic AI Runtime Engine**
 
-![Kotlin](https://img.shields.io/badge/Kotlin-7F52FF?style=flat&logo=kotlin&logoColor=white)
-![gRPC](https://img.shields.io/badge/gRPC-244c5a?style=flat&logo=grpc&logoColor=white)
-![Kafka](https://img.shields.io/badge/Apache%20Kafka-231F20?style=flat&logo=apachekafka&logoColor=white)
-![Redis](https://img.shields.io/badge/Redis-DC382D?style=flat&logo=redis&logoColor=white)
-![MCP](https://img.shields.io/badge/Protocol-MCP-blue?style=flat)
-![A2A](https://img.shields.io/badge/Protocol-A2A-green?style=flat)
+![Java](https://img.shields.io/badge/Java-21-ED8B00?style=flat&logo=openjdk&logoColor=white)
+![Build](https://img.shields.io/badge/build-Gradle_8-02303A?style=flat&logo=gradle&logoColor=white)
+![Tests](https://img.shields.io/badge/tests-736_passing-4CAF50?style=flat)
+![MCP](https://img.shields.io/badge/Protocol-MCP_JSON--RPC_2.0-blue?style=flat)
+![License](https://img.shields.io/badge/license-MIT-informational?style=flat)
 
 ---
 
-AgentForge is a production-grade orchestration platform for multi-agent AI workflows. It implements **speculative agent execution** — a novel scheduling technique borrowed from CPU branch prediction — where the orchestrator probabilistically pre-starts dependent agents before their predecessor tasks complete, rolling back on mismatch. On multi-step pipelines this eliminates the serialization tax that makes naive agent chaining slow, delivering **~40% reduction in end-to-end latency** in benchmarks against sequential orchestration.
+AgentForge is a Java 21 runtime engine for building agentic AI systems — programs where a large language model reasons, invokes tools, observes results, and loops until a task is complete. It implements the full agentic loop (conversation management, streaming, tool execution, hook interception, permission enforcement, and context compaction) as a lean, zero-heavyweight-dependency library.
 
-The platform speaks two protocols: **MCP (Model Context Protocol)** for agent-to-tool integration and **A2A (Agent-to-Agent Protocol)** for inter-agent task delegation, making it interoperable with any MCP-compliant tool registry and any A2A-aware agent runtime.
+The architecture is inspired by Claude Code's reference implementation: a single-agent, tool-calling loop that can be composed into larger systems. The core research contribution is **adaptive context compaction** — a four-strategy engine with entropy-scored selection that automatically selects the cheapest compaction approach given token pressure, conversation entropy, and tool-call density, deferring to LLM summarization only when pressure is critical.
 
-> This project applies concepts from *AI Engineering* (Chip Huyen, O'Reilly, 2025) Ch. 6 — "Agentic AI" — particularly the discussion of compound AI systems, tool use, and multi-step reasoning latency.
+> This project applies concepts from *AI Engineering* (Chip Huyen, O'Reilly, 2025) Ch. 6 — "Agentic AI" — and extends them with a production-grade Java implementation covering the full agent lifecycle.
 
 ---
 
 ## Table of Contents
 
-- [System Architecture](#system-architecture)
-- [Key Features](#key-features)
-- [How Speculative Execution Works](#how-speculative-execution-works)
-- [Tech Stack](#tech-stack)
+- [Architecture Overview](#architecture-overview)
+- [The Agentic Loop](#the-agentic-loop)
+- [Module Reference](#module-reference)
+- [Key Technical Details](#key-technical-details)
 - [Quick Start](#quick-start)
 - [Project Structure](#project-structure)
-- [Documentation](#documentation)
+- [Tech Stack](#tech-stack)
+- [Speculative Execution — Research Direction](#speculative-execution--research-direction)
 
 ---
 
-## System Architecture
+## Architecture Overview
 
-C4 Context diagram — the five runtime boundaries and how they communicate.
+Eight modules with strict dependency layering. `common` has no project dependencies; `runtime` owns the agent loop; `gateway` exposes HTTP/SSE and CLI surfaces.
 
 ```mermaid
-graph TB
-    subgraph Clients
-        C1[Web Client]
-        C2[CI / Automation]
-        C3[Human Reviewer]
+graph TD
+    subgraph gateway["gateway"]
+        GW[ForgeServer HTTP/SSE\nCliRepl\nSessionManager]
     end
 
-    subgraph Gateway["API Gateway (gRPC + REST)"]
-        GW[Gateway Service\nAuth · Rate Limit · Routing]
+    subgraph runtime["runtime"]
+        CR[ConversationRuntime\nAgent Loop]
+        CE[CompactionEngine\n4 strategies]
+        HP[HookPipeline]
+        PC[PermissionChecker]
+        SPB[SystemPromptBuilder]
+        FS[FileSessionStore]
+        UT[UsageTracker]
     end
 
-    subgraph Orchestration["Orchestration Layer"]
-        ORC[Orchestrator\nDAG Planner · Speculative Scheduler\nA2A Dispatcher]
+    subgraph apiclient["api-client"]
+        AC[ApiClient interface]
+        AP[AnthropicProvider]
+        OA[OpenAiProvider]
+        SSE[SseParser\nchunked delivery]
+        EM[SseEventMapper]
+        MC[ModelCatalog / ModelRouter]
     end
 
-    subgraph AgentPool["Agent Pool"]
-        A1[Research Agent]
-        A2[Code Agent]
-        A3[Critic Agent]
-        A4[Summarizer Agent]
+    subgraph tools["tools"]
+        TR[ToolRegistry]
+        BT[BashTool]
+        FRT[FileReadTool]
+        FWT[FileWriteTool]
+        FET[FileEditTool]
+        GT[GlobTool]
+        GRT[GrepTool]
     end
 
-    subgraph ToolLayer["MCP Tool Registry"]
-        T1[Web Search Tool]
-        T2[Code Executor Tool]
-        T3[File System Tool]
-        T4[LLM Completion Tool]
+    subgraph hooks["hooks"]
+        HCL[HookConfigLoader]
+        HR[HookRunner\nsubprocess protocol]
+        HPL[HookPipeline]
     end
 
-    subgraph EventBackbone["Kafka Event Backbone"]
-        K1[task.submitted]
-        K2[task.completed]
-        K3[speculation.checkpoint]
-        K4[rollback.triggered]
+    subgraph mcp["mcp"]
+        MSM[McpServerManager]
+        MTD[McpToolDiscovery]
+        ST[StdioTransport]
+        HT[HttpTransport]
     end
 
-    subgraph StateStore["Redis State Store"]
-        R1[Agent State\nCheckpoints]
-        R2[Speculation\nBuffers]
-        R3[DAG Execution\nContext]
+    subgraph config["config"]
+        CL[ConfigLoader\nlayered merge]
+        PP[PermissionPolicy\n5-tier]
     end
 
-    C1 -->|HTTPS / gRPC| GW
-    C2 -->|gRPC| GW
-    C3 -->|HTTPS| GW
-    GW -->|gRPC| ORC
-    ORC -->|A2A| A1
-    ORC -->|A2A| A2
-    ORC -->|A2A| A3
-    ORC -->|A2A| A4
-    A1 -->|MCP| T1
-    A2 -->|MCP| T2
-    A2 -->|MCP| T3
-    A3 -->|MCP| T4
-    A4 -->|MCP| T4
-    ORC -->|produce| K1
-    A1 -->|produce| K2
-    A2 -->|produce| K2
-    ORC -->|consume| K2
-    ORC -->|produce| K3
-    ORC -->|produce| K4
-    ORC <-->|read/write| R3
-    A1 <-->|checkpoint| R1
-    A2 <-->|checkpoint| R1
-    ORC <-->|speculation buffers| R2
+    subgraph common["common"]
+        CB[ContentBlock sealed]
+        AE[AgentForgeException sealed]
+        JP[JsonParser / JsonWriter]
+        SS[SessionSerializer]
+        MOD[Session / ConversationMessage\nTokenUsage / ModelInfo]
+    end
+
+    gateway --> runtime
+    runtime --> apiclient
+    runtime --> tools
+    runtime --> hooks
+    runtime --> mcp
+    runtime --> config
+    runtime --> common
+    apiclient --> common
+    tools --> common
+    hooks --> common
+    mcp --> common
+    config --> common
 ```
 
 ---
 
-## Key Features
+## The Agentic Loop
 
-### 1. Speculative Agent Execution
-
-The orchestrator maintains a lightweight **outcome predictor** trained on historical task completions. When confidence exceeds a configurable threshold (default: 0.80), dependent agents are pre-warmed and begin processing against the predicted output. If the predecessor's actual result matches the prediction, the speculative work commits with zero extra latency. On mismatch, buffered work is discarded and the agent re-executes against the real output — the rollback path. This mirrors speculative execution in out-of-order CPUs and is the primary source of the ~40% latency improvement observed on multi-step research-and-synthesis workflows.
-
-### 2. Dual Protocol — MCP + A2A
-
-- **MCP (Model Context Protocol)**: Agents consume tools (search, code execution, file I/O, LLM APIs) through a standardized JSON-RPC 2.0 interface. The MCP Tool Registry is schema-validated; adding a new tool requires only a descriptor JSON — no orchestrator changes.
-- **A2A (Agent-to-Agent Protocol)**: The orchestrator delegates sub-tasks to agents using Google's open A2A spec, enabling any A2A-compatible agent (external or internal) to participate in a workflow without modification.
-
-### 3. DAG Workflow Engine
-
-Workflows are expressed as **Directed Acyclic Graphs** with typed edges (data dependency, control dependency, human checkpoint). The planner performs:
-- Static topological sort at submission time
-- Dynamic critical-path re-ranking as agents complete
-- Speculative branch resolution (see above)
-- Human-in-the-loop pause/resume at annotated checkpoint nodes
-
-### 4. Event-Driven Backbone — Kafka Exactly-Once
-
-All inter-component communication flows through Kafka topics with **exactly-once semantics** (EOS) via transactional producers and idempotent consumers. This ensures that even under broker failover or agent crash-restart, no task is executed twice and no event is silently dropped. Key topics: `task.submitted`, `task.completed`, `speculation.checkpoint`, `rollback.triggered`, `hitl.approval`.
-
-### 5. Production Observability — OpenTelemetry + Grafana
-
-Every agent invocation, tool call, Kafka produce/consume, and speculation decision is instrumented with **OpenTelemetry** traces and metrics. Dashboards in Grafana surface:
-- Per-workflow latency breakdown (queue time / execution time / speculation overhead)
-- Speculation hit rate and rollback frequency per workflow type
-- Agent pool utilization and queue depth
-- Kafka consumer lag per topic/partition
-
----
-
-## How Speculative Execution Works
+`ConversationRuntime` is the heart of the engine. A single call to `executeTurn(userMessage)` drives the full loop — up to 25 iterations by default — until the model produces a text-only response (no tool calls pending).
 
 ```mermaid
 sequenceDiagram
-    participant ORC as Orchestrator
-    participant PRED as Outcome Predictor
-    participant A1 as Agent A (predecessor)
-    participant A2 as Agent B (dependent)
-    participant RS as Redis State
+    participant U as Caller
+    participant CR as ConversationRuntime
+    participant API as ApiClient (SSE)
+    participant HP as HookPipeline
+    participant PC as PermissionChecker
+    participant TE as ToolExecutor
+    participant CE as CompactionEngine
 
-    ORC->>A1: dispatch(task_A)
-    ORC->>PRED: predict(task_A, context)
-    PRED-->>ORC: prediction={result: X, confidence: 0.87}
-
-    Note over ORC: confidence >= threshold (0.80)
-
-    ORC->>RS: write speculation_buffer(task_B, predicted_input=X)
-    ORC->>A2: dispatch_speculative(task_B, input=X)
-
-    par Speculative execution
-        A2->>A2: execute(task_B, input=X)
-    and Real execution
-        A1->>A1: execute(task_A)
-        A1-->>ORC: result=X  ← matches prediction
+    U->>CR: executeTurn("write a test for X")
+    loop until text-only response or maxIterations
+        CR->>API: streamMessage(request)
+        API-->>CR: TextDelta / ToolUseStart / ToolUseInputDelta / ToolUseEnd / UsageUpdate
+        alt tool calls present
+            loop each tool call
+                CR->>HP: preToolUse(name, inputJson)
+                HP-->>CR: allow / deny / modifiedInput
+                CR->>PC: isAllowed(name, level)
+                PC-->>CR: true / false
+                CR->>TE: execute(name, effectiveInput)
+                TE-->>CR: result string
+                CR->>HP: postToolUse(name, result)
+                HP-->>CR: finalResult
+            end
+            CR->>CE: shouldCompact(session, contextWindow)
+            CE-->>CR: compact(session) if needed
+        end
     end
-
-    ORC->>RS: verify(actual=X, predicted=X) → MATCH
-    ORC->>RS: commit speculation_buffer(task_B)
-    Note over A2: Result committed, no re-execution needed
-
-    alt On mismatch (actual ≠ predicted)
-        ORC->>RS: discard speculation_buffer(task_B)
-        ORC->>A2: rollback + redispatch(task_B, input=actual)
-    end
+    CR-->>U: TurnResult(text, toolCalls, usage, iterations, wasCompacted)
 ```
 
-The predictor is a small fine-tuned classifier over (workflow type, task position, recent context embeddings) → (likely output category). It is intentionally kept cheap — inference must cost less than the expected savings from pre-starting Agent B early.
-
-Below is the core speculation dispatch logic in Kotlin:
-
-```kotlin
-suspend fun maybeDispatchSpeculative(
-    dag: WorkflowDag,
-    completedNode: DagNode,
-    actualResult: TaskResult,
-) {
-    val dependents = dag.dependentsOf(completedNode)
-    for (node in dependents) {
-        if (!dag.allPredecessorsComplete(node, except = completedNode)) continue
-
-        val prediction = predictor.predict(node, context = dag.executionContext())
-        if (prediction.confidence < config.speculationThreshold) continue
-
-        val buffer = speculationBufferStore.create(
-            nodeId = node.id,
-            predictedInput = prediction.result,
-            ttl = config.speculationTtl,
-        )
-        agentDispatcher.dispatchSpeculative(
-            node = node,
-            input = prediction.result,
-            bufferId = buffer.id,
-        )
-        metricsRecorder.speculationStarted(node, prediction.confidence)
-    }
-
-    // Now verify predecessor's actual result against any live speculation
-    speculationBufferStore.findByPredecessor(completedNode.id)?.let { buffer ->
-        if (buffer.predictedInput contentEquals actualResult.output) {
-            buffer.commit()
-            metricsRecorder.speculationHit(completedNode)
-        } else {
-            buffer.discard()
-            agentDispatcher.rollbackAndRedispatch(buffer.nodeId, actualResult.output)
-            metricsRecorder.speculationMiss(completedNode)
-        }
-    }
-}
-```
+The loop is deliberately synchronous and single-threaded per session — safe concurrency comes from one runtime instance per conversation, not shared mutable state.
 
 ---
 
-## Tech Stack
+## Module Reference
 
-| Layer | Technology | Role |
-|---|---|---|
-| Language | Kotlin 1.9 (JVM 21) | All services — coroutines for async agent dispatch |
-| RPC | gRPC + Protobuf | Gateway ↔ Orchestrator, Orchestrator ↔ Agents (A2A) |
-| Agent Protocol | MCP (JSON-RPC 2.0) | Agent ↔ Tool Registry communication |
-| Agent Protocol | A2A (Google Open Spec) | Orchestrator ↔ Agent task delegation |
-| Event Streaming | Apache Kafka 3.x | Exactly-once event backbone; task lifecycle events |
-| State Store | Redis 7 (w/ RedisJSON) | Agent checkpoints, speculation buffers, DAG context |
-| Observability | OpenTelemetry SDK | Distributed tracing + metrics instrumentation |
-| Dashboards | Grafana + Prometheus | Latency, speculation hit rate, agent pool utilization |
-| LLM APIs | OpenAI / Anthropic (abstracted) | Agent reasoning; outcome predictor fine-tuning |
-| Container | Docker + Docker Compose | Local dev; single-command cluster bring-up |
-| Build | Gradle 8 (Kotlin DSL) | Multi-module build; Protobuf codegen plugin |
+### `common` — 30 source files
+
+Foundation types shared by all modules. Zero project dependencies.
+
+**Sealed content model:**
+
+```java
+public sealed interface ContentBlock {
+    record Text(String text)                                    implements ContentBlock {}
+    record ToolUse(String id, String name, String inputJson)    implements ContentBlock {}
+    record ToolResult(String toolUseId, String content,
+                      boolean isError)                          implements ContentBlock {}
+}
+```
+
+Pattern matching in switch over `ContentBlock` is exhaustive — the compiler rejects unhandled cases.
+
+**Sealed exception hierarchy:**
+
+```java
+public abstract sealed class AgentForgeException extends RuntimeException
+    permits ApiException, ToolException, SessionException,
+            ConfigException, HookException, McpException {}
+```
+
+**Model records:** `Session`, `ConversationMessage`, `TokenUsage`, `ModelInfo`, `ToolDefinition`, `ToolSchema`
+
+**Zero-dependency JSON:** hand-written `JsonParser` / `JsonWriter` / `JsonValue` — no Jackson or Gson at runtime. `SessionSerializer` serializes full sessions to/from JSON using these primitives.
+
+**Utilities:** `IdGenerator` (UUID-based), `Preconditions` (fast-fail guards)
+
+---
+
+### `api-client` — 9 source files
+
+Multi-provider LLM abstraction with hand-built SSE streaming.
+
+**Provider interface:**
+
+```java
+public interface ApiClient {
+    Stream<AssistantEvent> streamMessage(ApiRequest request);
+}
+```
+
+Implemented by `AnthropicProvider` and `OpenAiProvider`. `ModelRouter` selects the correct provider from `ModelCatalog` based on the model name prefix (`claude-*` → Anthropic, `gpt-*` / `o*` → OpenAI).
+
+**SSE streaming:** `SseParser` implements RFC 8895 incrementally. It buffers raw HTTP chunks across `feed(String chunk)` calls, correctly handling boundaries that split inside a field name or value. Produces `SseEvent` records; `SseEventMapper` translates them to typed `AssistantEvent` variants:
+
+```java
+public sealed interface AssistantEvent {
+    record MessageStart(String id)                                  implements AssistantEvent {}
+    record TextDelta(String text)                                   implements AssistantEvent {}
+    record ToolUseStart(String id, String name)                     implements AssistantEvent {}
+    record ToolUseInputDelta(String partialJson)                    implements AssistantEvent {}
+    record ToolUseEnd()                                             implements AssistantEvent {}
+    record UsageUpdate(TokenUsage usage)                            implements AssistantEvent {}
+    record MessageStop()                                            implements AssistantEvent {}
+    record Error(String type, String message)                       implements AssistantEvent {}
+}
+```
+
+No external HTTP client dependency for streaming — uses `java.net.http.HttpClient` with `BodyHandlers.ofLines()`.
+
+---
+
+### `runtime` — 17 source files
+
+The agent loop and all runtime services.
+
+**`ConversationRuntime`** — builder-constructed, not thread-safe, one instance per session:
+
+```java
+ConversationRuntime runtime = ConversationRuntime.builder()
+    .apiClient(provider)
+    .toolExecutor(registry)
+    .hookPipeline(pipeline)
+    .permissionChecker(checker)
+    .promptBuilder(promptBuilder)
+    .model("claude-sonnet-4-5")
+    .maxIterations(25)
+    .session(Session.empty(sessionId))
+    .build();
+
+TurnResult result = runtime.executeTurn("Explain the diff in src/Foo.java");
+```
+
+**Context compaction — 4 strategies with adaptive selection:**
+
+| Strategy | When chosen |
+|---|---|
+| `SlidingWindowStrategy` | Low token pressure (< 70% of context) or pure Q&A |
+| `PriorityRetentionStrategy` | Medium pressure, tool-heavy sessions (> 50% tool-result messages) |
+| `EntropyPruningStrategy` | Medium pressure, high Shannon entropy (> 0.55) |
+| `LlmSummarizationStrategy` | High pressure (> 85% of context) — calls LLM to summarize |
+
+`AdaptiveSelector` scores three signals — token pressure, session entropy, and tool-call ratio — and picks the cheapest strategy that fits the pressure profile. `EntropyCalculator` computes per-message Shannon entropy over token frequency distributions.
+
+**Other runtime components:**
+
+- `SystemPromptBuilder` — assembles the system prompt including tool schemas
+- `FileSessionStore` / `SessionStore` — persist and restore sessions as JSON files
+- `UsageTracker` — accumulates `TokenUsage` per model across turns
+- `HookPipeline` (runtime) — thin adapter over the `hooks` module
+- `PermissionChecker` — enforces `PermissionLevel` before tool dispatch
+- `TurnResult` — immutable record: `(text, toolCalls, usage, iterations, wasCompacted)`
+
+---
+
+### `tools` — 9 source files
+
+Tool interface, registry, and 6 built-in implementations.
+
+```java
+public interface Tool {
+    String name();
+    String description();
+    ToolSchema schema();
+    String execute(String inputJson) throws ToolException;
+}
+```
+
+`ToolRegistry` maps tool names to `Tool` instances and exposes `ToolSchema` lists for inclusion in API requests.
+
+**Built-in tools:**
+
+| Tool | Description |
+|---|---|
+| `BashTool` | Executes shell commands via `/bin/sh -c`, captures stdout/stderr |
+| `FileReadTool` | Reads file content with optional line range |
+| `FileWriteTool` | Writes or overwrites file content |
+| `FileEditTool` | Applies exact-string replacements within a file |
+| `GlobTool` | Finds files matching glob patterns (uses `java.nio.file.FileSystem`) |
+| `GrepTool` | Searches file content with regex, returns matching lines with line numbers |
+
+---
+
+### `hooks` — 6 source files
+
+Pre/post tool-use interception via shell subprocesses. Mirrors Claude Code's hook protocol exactly.
+
+**Wire protocol:**
+
+```
+stdin  → { "tool": "bash", "input": "{...}", "type": "pre_tool_use" }
+exit 0 → ALLOW   (stdout = optional modified input, or empty)
+exit 2 → DENY    (stdout = reason message shown to model)
+other  → ERROR
+```
+
+`HookRunner` launches the hook command via `ProcessBuilder`, writes JSON to stdin using a virtual thread, reads stdout with a second virtual thread, and enforces a configurable timeout (default 10 s). Uses `Thread.ofVirtual()` to avoid blocking the caller thread during I/O.
+
+`HookPipeline` chains multiple hooks for the same event type. `HookConfigLoader` reads hook definitions from `~/.claude/settings.json`-style configuration. `HookType` is `PRE_TOOL_USE` or `POST_TOOL_USE`.
+
+---
+
+### `mcp` — 9 source files
+
+Model Context Protocol client — JSON-RPC 2.0 over stdio or HTTP.
+
+**Transport abstraction:**
+
+```java
+public interface McpTransport {
+    void connect() throws McpException;
+    JsonRpcResponse send(JsonRpcRequest request) throws McpException;
+    boolean isConnected();
+    void close();
+}
+```
+
+`StdioTransport` launches an MCP server as a subprocess and communicates over its stdin/stdout with newline-delimited JSON-RPC. `HttpTransport` sends JSON-RPC over HTTP POST.
+
+`McpServerManager` manages the lifecycle (connect, reconnect, shutdown) of one or more MCP servers defined in `McpServerConfig`. `McpToolDiscovery` calls `tools/list` on each connected server and returns `McpTool` records ready for inclusion in the tool registry.
+
+---
+
+### `config` — 6 source files
+
+Layered configuration with a 5-tier permission model.
+
+`ConfigLoader` merges three config sources in precedence order: local (`.agentforge/config.json`) overrides project (`agentforge.json`) overrides user (`~/.agentforge/config.json`). Deep-merge semantics: nested maps are merged, not replaced.
+
+**Permission tiers (`PermissionLevel`):**
+
+```
+READ_ONLY < WORKSPACE_WRITE < DANGER_FULL_ACCESS < PROMPT < ALLOW
+```
+
+`PermissionPolicy` maps tool names to required levels via ordered `ToolPermission` rules. Default mappings:
+
+| Tool | Required level |
+|---|---|
+| `file_read`, `grep`, `glob` | `READ_ONLY` |
+| `file_write`, `file_edit` | `WORKSPACE_WRITE` |
+| `bash` | `DANGER_FULL_ACCESS` |
+
+`AgentForgeConfig` is the top-level config record holding model, permission policy, hook paths, MCP server configs, and session store path.
+
+---
+
+### `gateway` — 6 source files
+
+HTTP/SSE server and interactive CLI REPL — the top-level entry point that wires all modules together.
+
+- **`ForgeServer`** — lightweight HTTP server using `com.sun.net.httpserver.HttpServer` with virtual thread executor. Routes: `POST /v1/sessions`, `GET /v1/sessions/{id}`, `POST /v1/sessions/{id}/message`, `GET /v1/sessions/{id}/events` (SSE), `GET /health`
+- **`CliRepl`** — interactive terminal REPL with slash commands (`/help`, `/quit`, `/clear`, `/compact`, `/status`, `/model`)
+- **`SessionManager`** — thread-safe session lifecycle management via `ConcurrentHashMap`
+- **`ForgeBuilder`** — builder pattern wiring ConfigLoader → ToolRegistry → HookPipeline → ConversationRuntime → ForgeServer
+- **`SseWriter`** — SSE event formatter for streaming responses
+- **`SlashCommand`** — sealed interface with pattern matching dispatch for CLI commands
+
+---
+
+## Key Technical Details
+
+### Java 21 preview features
+
+All modules compile with `--enable-preview`. Active features:
+
+- **Sealed interfaces and classes** — `ContentBlock`, `AssistantEvent`, `AgentForgeException`, `CompactionStrategy`
+- **Records** — throughout (`TokenUsage`, `TurnResult`, `ModelInfo`, `SseEvent`, `JsonRpcRequest`, etc.)
+- **Pattern matching in switch** — `AdaptiveSelector.tokenPressure()`, `ConversationRuntime.streamIteration()`, `SseEventMapper`
+- **Virtual threads** — `HookRunner` uses `Thread.ofVirtual()` for non-blocking stdin/stdout I/O in hook subprocesses
+
+### Hand-built SSE parser
+
+`SseParser` correctly handles HTTP chunked transfer encoding where chunk boundaries may fall anywhere — including mid-field-name or mid-value. The internal `StringBuilder` buffer accumulates incomplete lines across `feed()` calls. It follows RFC 8895 precisely: `id` fields with null bytes are rejected, trailing newlines are stripped from `data`, and the last event ID persists across event boundaries.
+
+### Zero-dependency JSON
+
+`JsonParser` tokenizes and parses JSON into a `JsonValue` sealed type tree (`JsonNull`, `JsonBoolean`, `JsonNumber`, `JsonString`, `JsonArray`, `JsonObject`). `JsonWriter` serializes back. Used everywhere in `common`, `hooks`, and `mcp` — no Jackson, Gson, or Moshi at runtime for core serialization.
+
+### Adaptive compaction — entropy scoring
+
+`EntropyCalculator` computes Shannon entropy over the token-frequency distribution of each message's text content:
+
+```
+H = -Σ p(t) · log₂(p(t))    for each word token t
+```
+
+Normalized to [0, 1]. High entropy indicates information-dense content unlikely to be safely dropped. `AdaptiveSelector` uses this alongside token pressure and tool-call ratio to select the cheapest compaction strategy that fits the current session profile.
+
+### Hook subprocess protocol
+
+The hook protocol is an exact match to Claude Code's documented hook interface. This means any hook script written for Claude Code works unmodified with AgentForge. The exit-code contract (`0` = allow, `2` = deny, anything else = error) is enforced by `HookRunner`. Modified input returned on stdout (exit 0, non-empty) replaces the original tool input before execution.
 
 ---
 
 ## Quick Start
 
-Requirements: Docker 24+, Docker Compose v2, `curl`, `jq`.
+Requirements: Java 21+, Gradle 8.
 
 ```bash
-# 1. Clone and bring up the full stack
+# Clone
 git clone https://github.com/ndqkhanh/agent-forge.git
 cd agent-forge
-docker compose up -d
 
-# Services started:
-#   - gateway        :8080 (REST) / :9090 (gRPC)
-#   - orchestrator   :9091 (internal gRPC)
-#   - agent-pool     :9092-9095 (4 agents)
-#   - kafka          :9092 (broker)
-#   - redis          :6379
-#   - grafana        :3000  (admin/admin)
-#   - prometheus     :9093
+# Build all modules
+./gradlew build
 
-# 2. Wait for orchestrator health check
-until curl -sf http://localhost:8080/health | jq -e '.status == "UP"' > /dev/null; do
-  sleep 1
-done
+# Run all 736 tests
+./gradlew test
 
-# 3. Submit a multi-step research workflow
-curl -s -X POST http://localhost:8080/v1/workflows \
-  -H "Content-Type: application/json" \
-  -d '{
-    "type": "research_and_synthesize",
-    "input": {
-      "topic": "speculative execution in LLM inference"
-    },
-    "config": {
-      "speculation_threshold": 0.80,
-      "max_parallel_agents": 4,
-      "hitl_checkpoints": ["critic_review"]
-    }
-  }' | jq .
+# Build a specific module
+./gradlew :runtime:build
+./gradlew :api-client:build
+```
 
-# Example response:
-# {
-#   "workflow_id": "wf_01J3KX...",
-#   "status": "RUNNING",
-#   "dag_nodes": 5,
-#   "speculative_branches": 2,
-#   "estimated_latency_ms": 4200
-# }
+**Minimal programmatic usage:**
 
-# 4. Poll workflow status
-WORKFLOW_ID="wf_01J3KX..."
-curl -s http://localhost:8080/v1/workflows/$WORKFLOW_ID | jq '{
-  status: .status,
-  elapsed_ms: .elapsed_ms,
-  speculation_hit_rate: .metrics.speculation_hit_rate,
-  nodes_complete: .progress.nodes_complete
-}'
+```java
+// 1. Build a provider
+ApiClient provider = AnthropicProvider.fromEnv(); // reads ANTHROPIC_API_KEY
 
-# 5. View traces in Grafana
-open http://localhost:3000/d/agentforge-overview
+// 2. Set up tools
+ToolRegistry registry = new ToolRegistry();
+registry.register(new BashTool());
+registry.register(new FileReadTool());
+registry.register(new GrepTool());
+
+// 3. Configure hooks (optional)
+HookPipeline hooks = HookPipeline.empty();
+
+// 4. Permission policy
+PermissionChecker checker = new PermissionChecker(
+    PermissionPolicy.defaultPolicy(PermissionLevel.WORKSPACE_WRITE));
+
+// 5. Assemble and run
+ConversationRuntime runtime = ConversationRuntime.builder()
+    .apiClient(provider)
+    .toolExecutor(registry)
+    .hookPipeline(hooks)
+    .permissionChecker(checker)
+    .promptBuilder(new SystemPromptBuilder())
+    .build();
+
+TurnResult result = runtime.executeTurn("List all TODO comments in src/");
+System.out.println(result.text());
+System.out.println("Tool calls: " + result.toolCalls().size());
+System.out.println("Tokens used: " + result.usage().totalTokens());
+```
+
+**Hook script example** (drop-in compatible with Claude Code hooks):
+
+```bash
+#!/bin/bash
+# deny-rm.sh — block any bash command that contains `rm -rf`
+INPUT=$(cat)
+TOOL=$(echo "$INPUT" | jq -r '.tool')
+CMD=$(echo "$INPUT"  | jq -r '.input')
+
+if [[ "$TOOL" == "bash" && "$CMD" == *"rm -rf"* ]]; then
+    echo "Destructive rm -rf is not allowed"
+    exit 2   # DENY
+fi
+exit 0       # ALLOW
+```
+
+Register in config:
+
+```json
+{
+  "hooks": {
+    "pre_tool_use": [{ "command": "/path/to/deny-rm.sh" }]
+  }
+}
 ```
 
 ---
@@ -305,95 +489,160 @@ open http://localhost:3000/d/agentforge-overview
 
 ```
 agent-forge/
-├── build.gradle.kts                  # Root Gradle build (Kotlin DSL)
-├── settings.gradle.kts
-├── docker-compose.yml
-├── proto/
-│   ├── gateway.proto                 # Gateway ↔ Orchestrator contracts
-│   ├── orchestrator.proto            # Orchestrator internal RPC
-│   └── agent.proto                   # A2A agent task delegation
-├── gateway/
-│   └── src/main/kotlin/
-│       └── forge/gateway/
-│           ├── GatewayServer.kt      # gRPC + REST entry point
-│           ├── AuthInterceptor.kt
-│           └── RateLimiter.kt
-├── orchestrator/
-│   └── src/main/kotlin/
-│       └── forge/orchestrator/
-│           ├── OrchestratorService.kt
-│           ├── dag/
-│           │   ├── WorkflowDag.kt        # DAG model + topological sort
-│           │   ├── DagPlanner.kt         # Static plan generation
-│           │   └── CriticalPathRanker.kt # Dynamic re-ranking
-│           ├── speculation/
-│           │   ├── OutcomePredictor.kt   # Confidence-gated predictor
-│           │   ├── SpeculationBuffer.kt  # Redis-backed rollback buffer
-│           │   └── SpeculativeDispatcher.kt
-│           ├── dispatch/
-│           │   ├── A2ADispatcher.kt      # Agent task delegation
-│           │   └── HitlCheckpoint.kt     # Human-in-the-loop pause/resume
-│           └── events/
-│               ├── KafkaProducer.kt      # Transactional EOS producer
-│               └── KafkaConsumer.kt      # Idempotent consumer
-├── agents/
-│   └── src/main/kotlin/
-│       └── forge/agents/
-│           ├── base/
-│           │   ├── BaseAgent.kt          # A2A handler + MCP client bootstrap
-│           │   └── McpClient.kt          # MCP JSON-RPC 2.0 client
-│           ├── research/ResearchAgent.kt
-│           ├── code/CodeAgent.kt
-│           ├── critic/CriticAgent.kt
-│           └── summarizer/SummarizerAgent.kt
-├── mcp-registry/
-│   └── src/main/kotlin/
-│       └── forge/mcp/
-│           ├── ToolRegistry.kt           # Schema-validated tool catalog
-│           └── tools/
-│               ├── WebSearchTool.kt
-│               ├── CodeExecutorTool.kt
-│               └── LlmCompletionTool.kt
-├── state/
-│   └── src/main/kotlin/
-│       └── forge/state/
-│           ├── AgentStateStore.kt        # Redis checkpoint read/write
-│           └── DagContextStore.kt
-├── observability/
-│   └── src/main/kotlin/
-│       └── forge/observability/
-│           ├── OtelConfig.kt             # SDK bootstrap + exporters
-│           ├── MetricsRecorder.kt        # Speculation hit/miss counters
-│           └── TraceContext.kt
-└── docs/
-    ├── architecture.md                   # Deep-dive: component design
-    ├── speculation-algorithm.md          # Predictor training + rollback semantics
-    ├── dag-engine.md                     # DAG DSL, checkpoint API
-    ├── protocols.md                      # MCP + A2A integration guide
-    └── observability.md                  # OTel config, Grafana dashboard guide
+├── build.gradle.kts                    # Root build: Java 21, --enable-preview, JUnit 5 + AssertJ
+├── settings.gradle.kts                 # 8 subprojects
+├── gradle/libs.versions.toml           # Version catalog
+│
+├── common/                             # 30 src, 17 test — zero project dependencies
+│   └── src/main/java/com/agentforge/common/
+│       ├── error/                      # AgentForgeException sealed hierarchy
+│       │   ├── AgentForgeException.java
+│       │   ├── ApiException.java
+│       │   ├── ToolException.java
+│       │   ├── SessionException.java
+│       │   ├── ConfigException.java
+│       │   ├── HookException.java
+│       │   └── McpException.java
+│       ├── model/                      # Domain records
+│       │   ├── ContentBlock.java       # sealed: Text | ToolUse | ToolResult
+│       │   ├── Session.java
+│       │   ├── ConversationMessage.java
+│       │   ├── TokenUsage.java
+│       │   ├── ModelInfo.java
+│       │   └── ...
+│       ├── json/                       # Zero-dependency JSON
+│       │   ├── JsonParser.java
+│       │   ├── JsonWriter.java
+│       │   ├── JsonValue.java          # sealed: Null|Boolean|Number|String|Array|Object
+│       │   └── SessionSerializer.java
+│       └── util/
+│           ├── IdGenerator.java
+│           └── Preconditions.java
+│
+├── api-client/                         # 9 src, 6 test
+│   └── src/main/java/com/agentforge/api/
+│       ├── provider/
+│       │   ├── ApiClient.java          # interface: streamMessage(ApiRequest)
+│       │   ├── AnthropicProvider.java
+│       │   ├── OpenAiProvider.java
+│       │   └── ApiRequest.java         # builder
+│       ├── stream/
+│       │   ├── SseParser.java          # RFC 8895, chunked delivery
+│       │   ├── SseEventMapper.java
+│       │   └── AssistantEvent.java     # sealed event variants
+│       └── model/
+│           ├── ModelCatalog.java
+│           └── ModelRouter.java
+│
+├── runtime/                            # 17 src, 11 test
+│   └── src/main/java/com/agentforge/runtime/
+│       ├── ConversationRuntime.java    # The agent loop (builder pattern)
+│       ├── TurnResult.java
+│       ├── ToolExecutor.java           # interface
+│       ├── HookPipeline.java
+│       ├── PermissionChecker.java
+│       ├── compaction/
+│       │   ├── CompactionEngine.java
+│       │   ├── CompactionStrategy.java # interface
+│       │   ├── AdaptiveSelector.java   # entropy-scored selection
+│       │   ├── EntropyCalculator.java
+│       │   ├── SlidingWindowStrategy.java
+│       │   ├── PriorityRetentionStrategy.java
+│       │   ├── EntropyPruningStrategy.java
+│       │   └── LlmSummarizationStrategy.java
+│       ├── prompt/
+│       │   └── SystemPromptBuilder.java
+│       ├── session/
+│       │   ├── SessionStore.java       # interface
+│       │   └── FileSessionStore.java
+│       └── usage/
+│           └── UsageTracker.java
+│
+├── tools/                              # 9 src, 7 test
+│   └── src/main/java/com/agentforge/tools/
+│       ├── Tool.java                   # interface
+│       ├── ToolExecutor.java
+│       ├── registry/
+│       │   └── ToolRegistry.java
+│       └── builtin/
+│           ├── BashTool.java
+│           ├── FileReadTool.java
+│           ├── FileWriteTool.java
+│           ├── FileEditTool.java
+│           ├── GlobTool.java
+│           └── GrepTool.java
+│
+├── hooks/                              # 6 src, 5 test
+│   └── src/main/java/com/agentforge/hooks/
+│       ├── HookDefinition.java
+│       ├── HookType.java               # PRE_TOOL_USE | POST_TOOL_USE
+│       ├── HookRunner.java             # subprocess, virtual threads, exit-code protocol
+│       ├── HookPipeline.java
+│       ├── HookResult.java             # allow | deny | error
+│       └── HookConfigLoader.java
+│
+├── mcp/                                # 9 src, 7 test
+│   └── src/main/java/com/agentforge/mcp/
+│       ├── JsonRpcRequest.java
+│       ├── JsonRpcResponse.java
+│       ├── McpServerConfig.java
+│       ├── McpServerManager.java
+│       ├── transport/
+│       │   ├── McpTransport.java       # interface
+│       │   ├── StdioTransport.java     # subprocess stdin/stdout
+│       │   └── HttpTransport.java      # HTTP POST
+│       └── discovery/
+│           ├── McpToolDiscovery.java
+│           └── McpTool.java
+│
+├── config/                             # 6 src, 6 test
+│   └── src/main/java/com/agentforge/config/
+│       ├── loader/
+│       │   ├── AgentForgeConfig.java
+│       │   ├── ConfigLoader.java       # 3-layer deep merge
+│       │   └── ConfigSource.java
+│       └── permission/
+│           ├── PermissionLevel.java    # 5-tier: READ_ONLY → ALLOW
+│           ├── PermissionPolicy.java
+│           └── ToolPermission.java
+│
+└── gateway/                            # 6 src, 6 test
+    └── src/main/java/com/agentforge/gateway/
+        ├── ForgeServer.java            # HTTP/SSE server (com.sun.net.httpserver)
+        ├── ForgeBuilder.java           # Wires all modules together
+        ├── SessionManager.java         # Thread-safe session lifecycle
+        ├── CliRepl.java                # Interactive REPL with slash commands
+        ├── SseWriter.java              # SSE event formatter
+        └── SlashCommand.java           # Sealed interface for CLI commands
 ```
 
 ---
 
-## Documentation
+## Tech Stack
 
-| Document | Description |
-|---|---|
-| [Architecture](docs/architecture.md) | Component design, gRPC contracts, data flow, scaling considerations |
-| [Speculation Algorithm](docs/speculation-algorithm.md) | Predictor model, confidence calibration, rollback semantics, benchmark methodology |
-| [DAG Engine](docs/dag-engine.md) | Workflow DSL, topological scheduling, HITL checkpoint API, dynamic re-ranking |
-| [Protocols](docs/protocols.md) | MCP tool registration guide, A2A task delegation schema, inter-protocol bridging |
-| [Observability](docs/observability.md) | OpenTelemetry SDK config, Prometheus scrape targets, Grafana dashboard import |
+| Layer | Technology | Role |
+|---|---|---|
+| Language | Java 21 + preview features | Sealed types, records, pattern matching in switch, virtual threads |
+| Build | Gradle 8 (Kotlin DSL) | Multi-module; version catalog (`libs.versions.toml`) |
+| LLM APIs | Anthropic + OpenAI (abstracted) | SSE streaming via `java.net.http` |
+| JSON | Hand-written (`JsonParser`/`JsonWriter`) | Zero runtime dependency for core serialization |
+| Session storage | Filesystem JSON | `FileSessionStore` via `SessionSerializer` |
+| Logging | SLF4J + Logback | Structured log output |
+| Testing | JUnit 5 + AssertJ | 736 tests across 65 test files |
+
+**Runtime dependencies are intentionally minimal.** The core modules (`common`, `api-client`, `runtime`, `tools`, `hooks`, `mcp`, `config`) depend only on SLF4J at runtime — no Spring, no Quarkus, no Jackson, no gRPC, no Kafka.
 
 ---
 
-## Why This Matters
+## Speculative Execution — Research Direction
 
-Sequential agent chaining — the default in most orchestration frameworks — forces each step to wait for the previous step's full output before beginning. On a 5-node pipeline with 1s average node latency and 100ms I/O overhead, sequential execution costs ~5.5s. Speculative execution with 0.85 hit rate and 2 speculative branches running in parallel collapses this to ~3.3s on the critical path, consistent with the ~40% improvement measured in internal benchmarks.
+The novel research contribution planned for AgentForge is **speculative agent execution**: probabilistically pre-starting dependent agent steps before their predecessor completes, using a lightweight outcome predictor. On a correct prediction, the dependent step commits with zero additional latency; on a misprediction, buffered work is discarded and re-executed against the actual result.
 
-This is not a theoretical optimization. It applies the same intuition that makes modern CPUs 10x faster than their in-order predecessors: predict, pre-execute, commit on match, rollback on miss. The cost of a misprediction (one redundant agent invocation) is bounded and acceptable when the prediction confidence gate is calibrated correctly.
+This applies the same intuition as CPU branch prediction to multi-step agentic pipelines, where serialization latency between sequential LLM calls is the dominant bottleneck. Internal analysis projects ~40% latency reduction on 5-node pipelines with an 85% prediction hit rate.
 
-The dual-protocol design (MCP + A2A) reflects a deliberate separation of concerns: tool use is a local concern (MCP handles it at the agent boundary), while task delegation is a system-level concern (A2A handles it at the orchestration boundary). This makes each layer independently replaceable and testable.
+The compaction engine and hook system in the current runtime form the necessary foundation: compaction bounds context growth across long pre-executed chains, and the hook pipeline provides the interception points needed to buffer and potentially roll back speculative tool effects.
+
+Implementation of speculative execution is tracked as the next research milestone.
 
 ---
 
